<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/profile_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        android:layout_marginBottom="@dimen/activity_padding"
        android:layout_marginLeft="@dimen/activity_padding"
        android:layout_marginRight="@dimen/activity_padding"
        android:layout_marginTop="@dimen/activity_padding"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/label_font_size"
                android:textColor="@color/colorGrey"
                android:text="@string/username_label"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/label_eMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_padding"
                android:textSize="@dimen/label_font_size"
                android:textColor="@color/colorGrey"
                android:text="@string/eMail_label"/>

            <TextView
                android:id="@+id/eMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eMail"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/label_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_padding"
                android:textSize="@dimen/label_font_size"
                android:textColor="@color/colorGrey"
                android:text="@string/password_label"/>

            <TextView
                android:id="@+id/password"
                android:password="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eMail"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/profile_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        android:layout_marginBottom="@dimen/activity_padding"
        android:layout_marginLeft="@dimen/activity_padding"
        android:layout_marginRight="@dimen/activity_padding"
        android:layout_marginTop="@dimen/activity_padding"
        android:layout_below="@id/profile_data">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/type_headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/card_headline_font_size"
                android:text="@string/profile_type_headline"/>

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_type"
                android:textColor="@color/colorBlack" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_padding"
        android:text="@string/profile_delete"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:background="@color/error_color"
        android:textColor="@color/colorWhite"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_padding"
        android:text="Als Student verifizieren"
        android:id="@+id/buttonVerify"
        android:visibility="gone"
        android:layout_above="@id/button2"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"/>

</RelativeLayout>
