<?xml version="1.0" encoding="utf-8"?>
<!-- A CardView that contains a TextView -->
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="2dp"
    android:layout_marginTop="@dimen/activity_padding"
    android:layout_marginLeft="@dimen/activity_padding"
    android:layout_marginRight="@dimen/activity_padding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/thread_title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/card_headline_font_size"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/thread_title"/>

        <TextView
            android:id="@+id/thread_excerpt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/thread_excerpt"
            android:layout_below="@id/thread_title_input"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/thread_excerpt"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_padding"
                android:text="@string/thread_comments"/>

            <!-- This is a little hack to allow the author to be aligned to the right
                 of the LinearLayout -->
            <View android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1" />

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:id="@+id/verifiedIndicator"
                android:src="@drawable/check"
                android:background="@color/colorPrimary"
                android:gravity="center|end"
                android:layout_gravity="bottom"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="2dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_padding"
                android:text="@string/thread_author"
                android:gravity="end"/>


        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
