<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.rfunk.hochschulify.RegisterActivity">



    <android.support.design.widget.TextInputLayout
        android:id="@+id/registerMail_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:layout_alignParentEnd="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/registerMail"
            android:hint="@string/registerMail_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/registerUsername_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/registerMail_input_layout"
        android:layout_alignEnd="@+id/registerMail_input_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/registerUsername"
            android:hint="@string/registerUsername_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/registerPassword_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/registerUsername_input_layout"
        android:layout_alignEnd="@+id/registerUsername_input_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/registerPassword"
            android:hint="@string/inputPassword_hint" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerButton_Text"
        android:id="@+id/button"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/registerPassword_input_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite" />

</RelativeLayout>
