<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WrittenThreadsActivity">

    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>

    <!-- Little Hack, first card needs top margin -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        android:layout_marginBottom="@dimen/activity_padding"
        android:layout_marginLeft="@dimen/activity_padding"
        android:layout_marginRight="@dimen/activity_padding"
        android:layout_marginTop="@dimen/activity_padding">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">


            <TextView
                android:id="@+id/thread_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_headline_font_size"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/thread_title"/>

            <TextView
                android:id="@+id/comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/thread_title"
                android:text="@string/thread_comments"/>

            <TextView
                android:id="@+id/entfernen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/thread_title"
                android:text="@string/thread_delete"/>

        </RelativeLayout>


    </android.support.v7.widget.CardView>
    <include layout="@layout/written_thread_card" android:id="@+id/card2"/>
    <include layout="@layout/written_thread_card" android:id="@+id/card3"/>
    <include layout="@layout/written_thread_card" android:id="@+id/card4"/>
    <include layout="@layout/written_thread_card" android:id="@+id/card5"/>
    <include layout="@layout/written_thread_card" android:id="@+id/card6"/>


</LinearLayout>
