<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SingleThreadActivity"
            android:fillViewport="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar" android:id="@+id/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:orientation="vertical"
            android:id="@+id/linearLayout">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                card_view:cardCornerRadius="2dp"
                android:layout_marginTop="@dimen/activity_padding"
                android:layout_marginLeft="@dimen/activity_padding"
                android:layout_marginRight="@dimen/activity_padding"
                android:layout_marginBottom="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/thread_title_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/card_headline_font_size"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"
                        android:text="@string/thread_title" />

                    <TextView
                        android:id="@+id/author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/thread_title_input"
                        android:text="@string/thread_author"/>

                    <TextView
                        android:id="@+id/thread_body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/thread_content"
                        android:layout_below="@id/author"
                        android:textColor="@color/primary_text_default_material_light"
                        android:textSize="16sp"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/button_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Antwort schreiben"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginBottom="@dimen/activity_margin"
                android:background="@color/colorAccent"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_padding"
            android:layout_marginRight="@dimen/activity_padding"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Kommentare (7)"
            android:id="@+id/comments_headline"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentStart="true" />

         <android.support.v7.widget.RecyclerView
             android:id="@+id/commentsList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/comments_headline"/>

        <!-- <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/comments_headline"
             android:orientation="vertical"
             android:id="@+id/comment_wrapper"
             android:layout_marginLeft="@dimen/activity_padding"
             android:layout_marginRight="@dimen/activity_padding"
             android:layout_marginTop="@dimen/activity_padding">

         </LinearLayout> -->
    </RelativeLayout>
</LinearLayout>
